deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gofer
  namespace: gofer
spec:
  selector:
    app: gofer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
