deploy/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gofer
  namespace: gofer
  annotations:
    external-dns.alpha.kubernetes.io/target: lb.weslab.vip
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gofer.weslab.vip`)
      kind: Rule
      services:
        - name: gofer
          port: 8080
  tls:
    secretName: gofer-tls
